# aiocoap-pubsub-broker

./: AGENTS.md  README.md  arch.txt  broker.py  client.py  codec.py  demo-topic-config.sh  demo.sh  initialize-broker.sh  initialize-config.sh  initialize-data.sh  launch.json  license  publish.sh  pyproject.toml  requirements.txt  simple-demo.sh  topics.txt
scripts/: demo-topic-config.sh  demo-topic-data.sh  initialize-data.sh
