[project]
name = "aiocoap-pubsub-broker"
version = "0.3.0"
description = "A CoAP publish-subscribe broker implementing draft-ietf-core-coap-pubsub-19, built on aiocoap."
authors = [{ name = "Jaime Jimenez", email = "jaimejim@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocoap @ git+https://github.com/chrysn/aiocoap",
    "cbor2>=5.6.0",
]

[project.optional-dependencies]
dev = ["hupper>=1.12.1"]

[project.scripts]
pubsub-broker = "broker:main_cli"
pubsub-client = "client:main"

[tool.setuptools]
py-modules = ["broker", "client"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
